[gd_scene load_steps=3 format=3 uid="uid://cfr6nyshcgv1h"]

[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://Resources/Theme/wc3_theme.tres" id="1_ckg1j"]
[ext_resource type="Script" path="res://Scenes/PregameHUD/DifficultyMenu.gd" id="2_0811p"]

[node name="DifficultyMenu" type="VBoxContainer"]
size_flags_vertical = 0
theme = ExtResource("1_ckg1j")
script = ExtResource("2_0811p")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "Select Difficulty:"

[node name="BeginnerButton" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Beginner"

[node name="EasyButton" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Easy"

[node name="MediumButton" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Medium"

[node name="HardButton" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Hard"

[node name="ExtremeButton" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "Extreme"

[connection signal="pressed" from="BeginnerButton" to="." method="_on_beginner_button_pressed"]
[connection signal="pressed" from="EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="HardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="ExtremeButton" to="." method="_on_extreme_button_pressed"]
